# rackscribe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  README.md  mypy.ini  out_test.xlsx  pyproject.toml  rackscribe.py  requirements.txt
.github/workflows/: ci.yml
inventory/: lab.yaml
src/: commands.py  connection.py  inventory.py  logging.py  logging_setup.py  output.py  sanitize.py
src/rackscribe/: __main__.py  auto_setup.py  commands.py  connection.py  inventory.py  logging_setup.py  operations.py  output.py  sanitize.py
