[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rackscribe"
version = "2.0"
dependencies = [
    "netmiko",
    "ntc_templates",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "PyYAML",
    "textfsm",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
    "types-openpyxl",
    "ruff",
    "pre-commit",
]

[project.scripts]
rackscribe = "rackscribe.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "."]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = []
# Allow auto-fixes for all enabled rules when --fix is passed.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Re-export patterns in __init__.py often trip F401 (unused import).
"**/__init__.py" = ["F401"]

[tool.ruff.format]
